Fix double-scrollbar issue in brave

--- a/packages/top-level-frame/static/style.css
+++ b/packages/top-level-frame/static/style.css
@@ -1,13 +1,17 @@
 body {
   margin: 0;
+  overflow: hidden;
 }
 
 #wiki-frame-parent iframe {
+  display: block;
+  border: none;
   border-width: 0px;
   height:100vh;
   width:100vw;
   pointer-events: auto;
   background-color: white;
+
 }
 
 .section {
